Updated Pokemon Page

--- a/sub-sites/pokemon.html
+++ b/sub-sites/pokemon.html
@@ -129,140 +129,41 @@
 			<br>
 			<a href="https://play.pokemonshowdown.com/" class="white-menu light-gray-text"> Battle Online </a>
 			<br>
-
-			<h2> Pok&eacute;mon Sword and Shield Favorites Checklist </h2>
-
-			<h3> Non-legendaries </h3>
-
-			<div>
-				<img class="poke-mini-sprite" src="../pictures/pokemon/mini-sprites/galvantula.png">
-				<img class="poke-mini-sprite" src="../pictures/pokemon/mini-sprites/noivern.png">
-				<img class="poke-mini-sprite" src="../pictures/pokemon/mini-sprites/klinklang.png">
-				<img class="poke-mini-sprite" src="../pictures/pokemon/mini-sprites/sylveon.png">
-				<img class="poke-mini-sprite silhouette" src="../pictures/pokemon/mini-sprites/medicham.png">
-				<img class="poke-mini-sprite silhouette" src="../pictures/pokemon/mini-sprites/medicham-mega.png">
-			</div>
-			<div>
-				<img class="poke-mini-sprite" src="../pictures/pokemon/mini-sprites/aegislash.png">
-				<img class="poke-mini-sprite silhouette" src="../pictures/pokemon/mini-sprites/zoroark.png">
-				<img class="poke-mini-sprite" src="../pictures/pokemon/mini-sprites/rotom.png">
-				<img class="poke-mini-sprite silhouette" src="../pictures/pokemon/mini-sprites/eelektross.png">
-				<img class="poke-mini-sprite silhouette" src="../pictures/pokemon/mini-sprites/banette.png">
-				<img class="poke-mini-sprite silhouette" src="../pictures/pokemon/mini-sprites/banette-mega.png">
-			</div>
-			<div>
-				<img class="poke-mini-sprite" src="../pictures/pokemon/mini-sprites/meowstic.png">
-				<img class="poke-mini-sprite silhouette" src="../pictures/pokemon/mini-sprites/greninja.png">
-				<img class="poke-mini-sprite" src="../pictures/pokemon/mini-sprites/vanilluxe.png">
-				<img class="poke-mini-sprite" src="../pictures/pokemon/mini-sprites/wishiwashi.png">
-				<img class="poke-mini-sprite silhouette" src="../pictures/pokemon/mini-sprites/camerupt.png">
-				<img class="poke-mini-sprite silhouette" src="../pictures/pokemon/mini-sprites/camerupt-mega.png">
-			</div>
-			<div>
-				<img class="poke-mini-sprite silhouette" src="../pictures/pokemon/mini-sprites/talonflame.png">
-				<img class="poke-mini-sprite" src="../pictures/pokemon/mini-sprites/torkoal.png">
-				<img class="poke-mini-sprite silhouette" src="../pictures/pokemon/mini-sprites/infernape.png">
-				<img class="poke-mini-sprite silhouette" src="../pictures/pokemon/mini-sprites/incineroar.png">
-				<img class="poke-mini-sprite" src="../pictures/pokemon/mini-sprites/charizard.png">
-				<img class="poke-mini-sprite silhouette" src="../pictures/pokemon/mini-sprites/charizard-mega-x.png">
-			</div>
-			<div>
-				<img class="poke-mini-sprite silhouette" src="../pictures/pokemon/mini-sprites/staraptor.png">
-				<img class="poke-mini-sprite" src="../pictures/pokemon/mini-sprites/bronzong.png">
-				<img class="poke-mini-sprite" src="../pictures/pokemon/mini-sprites/avalugg.png">
-				<img class="poke-mini-sprite" src="../pictures/pokemon/mini-sprites/wailord.png">
-				<img class="poke-mini-sprite" src="../pictures/pokemon/mini-sprites/lucario.png">
-				<img class="poke-mini-sprite silhouette" src="../pictures/pokemon/mini-sprites/lucario-mega.png">
-			</div>
-
-			<h3> Legendaries </h3>
-
-			<div>
-				<img class="poke-mini-sprite" src="../pictures/pokemon/mini-sprites/mew.png">
-				<img class="poke-mini-sprite silhouette" src="../pictures/pokemon/mini-sprites/ho-oh.png">
-				<img class="poke-mini-sprite silhouette" src="../pictures/pokemon/mini-sprites/groudon-primal.png">
-				<img class="poke-mini-sprite silhouette" src="../pictures/pokemon/mini-sprites/dialga.png">
-				<img class="poke-mini-sprite silhouette" src="../pictures/pokemon/mini-sprites/zekrom.png">
-				<img class="poke-mini-sprite silhouette" src="../pictures/pokemon/mini-sprites/yveltal.png">
-				<img class="poke-mini-sprite silhouette" src="../pictures/pokemon/mini-sprites/solgaleo.png">
-			</div>
-
-
 			
 			<h2 class="white-text"> Current Team - Pok&eacute;mon Shield </h2>
 			<div>
-				<img src="../pictures/pokemon/3dmodels/corviknight.png">
+				<img class="poke-medium-sprite" src="../pictures/pokemon/3dmodels/galvantula.gif">
+				<br>
+				<span class="gray-button">Galvantula</span>
+			</div>
+			<br>
+			<div>
+				<img class="poke-medium-sprite" src="../pictures/pokemon/3dmodels/dragapult.gif">
+				<br>
+				<span class="gray-button">Dragapult</span>
+			</div>
+			<br>
+			<div>
+				<img class="poke-medium-sprite-wishiwashi" src="../pictures/pokemon/3dmodels/wishiwashi-s.gif">
+				<br>
+				<span class="gray-button">Wishiwashi</span>
+			</div>
+			<br>
+			<div>
+				<img class="poke-medium-sprite-corviknight" src="../pictures/pokemon/3dmodels/corviknight.gif">
 				<br>
 				<span class="gray-button">Corviknight</span>
 			</div>
 			<br>
 			<div>
-				<img src="../pictures/pokemon/3dmodels/boltund.png">
+				<img class="poke-medium-sprite-sylveon" src="../pictures/pokemon/3dmodels/sylveon.gif">
 				<br>
-				<span class="gray-button"> Boltund </span>
+				<span class="gray-button">Sylveon</span>
 			</div>
 			<br>
 			<div>
-				<img src="../pictures/pokemon/3dmodels/runerigus.png">
+				<img class="poke-medium-sprite-torkoal" src="../pictures/pokemon/3dmodels/torkoal.gif">
 				<br>
-				<span class="gray-button"> Runerigus (Galarian) </span>
+				<span class="gray-button">Torkoal</span>
 			</div>
 			<br>
-			<div>
-				<img src="../pictures/pokemon/3dmodels/wishiwashi.png">
-				<br>
-				<img src="../pictures/pokemon/3dmodels/wishiwashi-s.png">
-				<br>
-				<span class="gray-button"> Wishiwashi </span>
-			</div>
-			<br>
-			<div>
-				<img src="../pictures/pokemon/3dmodels/cinderace.png">
-				<br>
-				<span class="gray-button"> Cinderace </span>
-			</div>
-			<br>
-
-			<h2 class="white-text"> The Main Team </h2>
-			<div>
-				<img src="http://www.smogon.com/dex/media/sprites/xy/galvantula.gif">
-				<br>
-				<span class="yellow-text gray-button"> Galvantula </span>
-			</div>
-			<div>
-				<img src="http://www.smogon.com/dex/media/sprites/xy/noivern.gif">
-				<br>
-				<span class="purple-text gray-button"> Noivern </span>	
-			</div>
-			<br>
-			<div>
-				<img src="http://www.smogon.com/dex/media/sprites/xy/rotom-heat.gif">
-				<br>
-				<span class="red-orange-text gray-button"> Rotom-Heat </span>
-			</div>
-			<br>
-			<div>
-				<img src="http://www.smogon.com/dex/media/sprites/xy/klinklang.gif">
-				<br>
-				<span class="turquoise-text gray-button"> Klinklang </span>
-			</div>
-			<br>
-			<div>
-				<img src="http://www.smogon.com/dex/media/sprites/xy/sylveon.gif">
-				<br>
-				<span class="light-pink-text gray-button"> Sylveon <br> "Pride" </span>
-			</div>
-			<br>
-			<div>
-				<img src="http://www.smogon.com/dex/media/sprites/xy/medicham.gif">
-				<br>
-				<img src="http://www.smogon.com/dex/media/sprites/xy/medicham-mega.gif">
-				<br>
-				<span class="white-text gray-button"> Medicham
-				<img width="15px" src="../pictures/mega_keystone.png">
-				</span>
-			</div>
-		</div>	
-	</div>
-</body>
-</html>
