Remove Blake and fix Pokemon Let's Go width

--- a/sub-sites/poke-teams.html
+++ b/sub-sites/poke-teams.html
@@ -98,46 +98,47 @@
 			</div>
 		</div>
 		
-		
-		
 		<div class="white-outline centering third-width">
-			<h2 class="white-text"> Current Team - Pok&eacute;mon Shield </h2>
+			<h2 class="white-text"> Current Team - Pok&eacute;mon Platinum </h2>
 			<div>
-				<img src="../pictures/pokemon/3dmodels/corviknight.png">
+				<img src="http://www.smogon.com/dex/media/sprites/xy/infernape.gif">
 				<br>
-				<span class="gray-button">Corviknight</span>
+				<span class="white-text gray-button"> Infernape </span>
 			</div>
 			<br>
 			<div>
-				<img src="../pictures/pokemon/3dmodels/boltund.png">
+				<img src="http://www.smogon.com/dex/media/sprites/xy/staraptor.gif">
 				<br>
-				<span class="gray-button"> Boltund </span>
+				<span class="white-text gray-button"> Staraptor </span>
 			</div>
 			<br>
 			<div>
-				<img src="../pictures/pokemon/3dmodels/runerigus.png">
+				<img src="http://www.smogon.com/dex/media/sprites/xy/bronzong.gif">
 				<br>
-				<span class="gray-button"> Runerigus (Galarian) </span>
+				<span class="white-text gray-button"> Bronzong </span>
 			</div>
 			<br>
 			<div>
-				<img src="../pictures/pokemon/3dmodels/wishiwashi.png">
+				<img src="http://www.smogon.com/dex/media/sprites/xy/gastrodon-east.gif">
 				<br>
-				<img src="../pictures/pokemon/3dmodels/wishiwashi-s.png">
-				<br>
-				<span class="gray-button"> Wishiwashi </span>
+				<span class="white-text gray-button"> Gastrodon </span>
 			</div>
 			<br>
 			<div>
-				<img src="../pictures/pokemon/3dmodels/cinderace.png">
+				<img src="http://www.smogon.com/dex/media/sprites/xy/drapion.gif">
 				<br>
-				<span class="gray-button"> Cinderace </span>
+				<span class="white-text gray-button"> Drapion </span>
 			</div>
 			<br>
+			<div>
+				<img src="http://www.smogon.com/dex/media/sprites/xy/froslass.gif">
+				<br>
+				<span class="white-text gray-button"> Froslass </span>
+			</div>
 		</div>
 	</div>
 	
-	<a name="seasonal">
+	<a name="seasonal"/>
 	<h2 class="black-bg"> Seasonal </h2>
 	<div class="container">
 		<div class="white-outline centering third-width">	
@@ -186,11 +187,52 @@
 		</div>
 	</div>
 	
-	<a name="game-playthroughs">
+	<a name="game-playthroughs"/>
 	<h2 class="black-bg"> Game Playthroughs </h2>
-	<div class="container"> 
-		<div class="white-outline centering third=width">
-		<h2 class="white-text"> Pok&eacute;mon Let's Go Eevee! </h2>
+	<div class="container">
+
+		<div class="white-outline centering third-width">
+			<h2 class="white-text"> Current Team - Pok&eacute;mon Shield </h2>
+			<div>
+				<img class="poke-medium-sprite" src="../pictures/pokemon/3dmodels/galvantula.gif">
+				<br>
+				<span class="gray-button"> Galvantula </span>
+			</div>
+			<br>
+			<div>
+				<img class="poke-medium-sprite" src="../pictures/pokemon/3dmodels/dragapult.gif">
+				<br>
+				<span class="gray-button"> Dragapult </span>
+			</div>
+			<br>
+			<div>
+				<img class="poke-medium-sprite-wishiwashi" src="../pictures/pokemon/3dmodels/wishiwashi-s.gif">
+				<br>
+				<span class="gray-button"> Wishiwashi </span>
+			</div>
+			<br>
+			<div>
+				<img class="poke-medium-sprite-corviknight" src="../pictures/pokemon/3dmodels/corviknight.gif">
+				<br>
+				<span class="gray-button">Corviknight</span>
+			</div>
+			<br>
+			<div>
+				<img class="poke-medium-sprite-sylveon" src="../pictures/pokemon/3dmodels/sylveon.gif">
+				<br>
+				<span class="gray-button"> Sylveon </span>
+			</div>
+			<br>
+			<div>
+				<img class="poke-medium-sprite-torkoal" src="../pictures/pokemon/3dmodels/torkoal.gif">
+				<br>
+				<span class="gray-button"> Torkoal </span>
+			</div>
+			<br>
+		</div>	
+		
+		<div class="white-outline centering third-width">
+			<h2 class="white-text"> Pok&eacute;mon Let's Go Eevee! </h2>
 			<div>
 				<img src="https://play.pokemonshowdown.com/sprites/xyani/raichu.gif">
 				<br>
@@ -442,45 +484,6 @@
 				<span class="tan-text gray-button"> Hitmonlee </span>
 			</div>
 			
-		</div>
-		
-		<div class="white-outline centering third-width">
-			<h2 class="white-text"> Pok&eacute;mon Diamond and Platinum </h2>
-			<div>
-				<img src="http://www.smogon.com/dex/media/sprites/xy/staraptor.gif">
-				<br>
-				<span class="almost-black-text gray-button"> Staraptor </span>
-			</div>
-			<br>
-			<div>
-				<img src="http://www.smogon.com/dex/media/sprites/xy/spiritomb.gif">
-				<br>
-				<span class="purple-text gray-button"> Spiritomb </span>
-			</div>
-			<br>
-			<div>
-				<img src="http://www.smogon.com/dex/media/sprites/xy/luxray.gif">
-				<br>
-				<span class="yellow-text gray-button"> Luxray </span>
-			</div>
-			<br>
-			<div>
-				<img src="http://www.smogon.com/dex/media/sprites/xy/drapion.gif">
-				<br>
-				<span class="lavender-text gray-button"> Drapion </span>
-			</div>
-			<br>
-			<div>
-				<img src="http://www.smogon.com/dex/media/sprites/xy/bronzong.gif">
-				<br>
-				<span class="turquoise-text gray-button"> Bronzong </span>
-			</div>
-			<br>
-			<div>
-				<img src="http://www.smogon.com/dex/media/sprites/xy/infernape.gif">
-				<br>
-				<span class="red-text gray-button"> Infernape </span>
-			</div>
 		</div>
 	</div>
 </body>
